--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"daisyui": "^2.45.0",
 		"dotenv": "^16.0.3",
 		"openai": "^3.1.0",
+		"svelte-tags-input": "^4.0.0",
 		"vite": "^4.0.1"
 	}
 }
